# worldscope

./: .gitattributes  .gitignore  .pushover-sent.json  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  watchareas.yaml
briefings/: 2026-05-26-events.geojson  2026-05-26.md  2026-05-27-events.geojson  2026-05-27.md  2026-05-28-events.geojson  2026-05-28.md  2026-05-29-events.geojson  2026-05-29.md  2026-05-30.md  2026-05-31-events.geojson  2026-05-31.md
data/: store.sqlite
docs/: PIPELINE.md  SECTION_ADAPTER_CONTRACT.md  political_figures.md  ukraine_theater.md
mcp-server/: README.md  worldscope_mcp.py
tests/: test_backfill_filter.py  test_cache_state_machine.py  test_claim_ledger.py  test_content_filter.py  test_fact_check.py  test_figure_anomaly.py  test_figures_engine.py  test_graph_export.py  test_lake_export.py  test_mcp_server.py  test_political_figures.py  test_reproducibility.py  test_security.py  test_source_health.py  test_threads.py  test_ukraine_theater.py
tools/: api_health.py  backfill_lake_history.py  render_brief.py
weekly_briefings/: 2026-W22.md
worldscope/: __init__.py  brief.py  bundle.py  calendar.py  cartography.py  cartography_ukraine.py  dedup.py  embeddings.py  fact_check.py  figures_engine.py  figures_registry.yaml  globe_page.py  graph_export.py  graph_page.py  graphics.py  health_page.py  lake_export.py  mcp.py  overview.py  people.py  render.py  reproducibility.py  reproducibility_page.py  research.py  section_history.py  site_builder.py  source_health.py  synth.py  threads.py  trends.py  (+2 more)
(+1064 files in other folders)
