[project]
name = "worldscope"
version = "0.1.0"
description = "Daily global political, economic, and OSINT briefing — by Ian Helfrich."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "feedparser>=6.0",
  "jinja2>=3.1",
  "anthropic>=0.34",
  "python-dotenv>=1.0",
  "bleach>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worldscope*"]
